# LumenShell

./: .gitignore  AGENTS.md  HANDOFF-2026-05-16-1131.md  HANDOFF.md  Makefile  README  README.md  a.out  decorations.md  default-theme.json  env.sh  install_dependencies.py  main.c  meson.build  meson_options.txt
Exy-panel/: AGENT_CONTEXT.md  Makefile  main
Kickoff/: Makefile  compile_commands.json  main
Skia/: Makefile  layer_shell.cpp  main.cpp  wlr-layer-shell-unstable-v1-client-protocol.h
clutter/: Makefile  (+2 more)
junkyard/lumen-panel/: Makefile  meson.build
junkyard/lumen-panel/src/: ini.vala  main.vala  theme.vala  utils.vala
junkyard/lumen-panel/src/common/: button.vala  horizontal_slider.vala  scrollview.vala  signalbars.vala  textfield.vala
junkyard/lumen-panel/src/components/: apppopup.vala  hoverableicon.vala  iconandtext.vala  itraypage.vala  panel.vala
junkyard/lumen-panel/src/components/battery/: battery.vala
junkyard/lumen-panel/src/components/exit/: exit.vala
junkyard/lumen-panel/src/components/sound/: sound.vala  sound_service.vala
junkyard/lumen-panel/src/components/wifi/: wifi.vala  wifipage.vala
junkyard/lumen-panel/subprojects/: wlhooks
junkyard/poc-gtk4-toplevel/: main.vala  meson.build  toplevel_shim.c  toplevel_shim.h
libdrawkit/: backend.c  backend.h  font.c  font.h  meson.build  shaders.c  shaders.h  structures.c  structures.h
libdrawkit/shaders/rounded/: frag.glsl  vert.glsl  vert2.glsl
libdrawkit/shaders/shapes/: frag.glsl
libdrawkit/shaders/texture/: frag.glsl  vert.glsl
liblayershell/: CMakeLists.txt  egl.c  egl.h  liblayershell.c  liblayershell.h  main.c  meson.build  registry.c  registry.h  string_ex.h  toplevel_managment.c
liblayershell/wayland_features/: compositor.c  layershell.c  layershell.h  seat.c  seat.h  toplevel.c  toplevel.h  toplevel_utilities.h
liblayershell/wayland_modules/: compositor.c  compositor.h  layershell.c  layershell.h  seat.c  seat.h
lumen-panel/: AGENT_CONTEXT.md  Makefile  env.sh  meson.build  plan.md
lumen-panel/src/: animation.vala  ini.vala  main.vala  panel_config.vala  panel_service.vala  panel_window.vala  peek_ipc.vala  radio_state.vala  resources.gresource.xml  style.css  theme.vala  utils.vala
lumen-panel/src/common/: button.vala  chip.vala  horizontal_slider.vala  progressbar.vala  scrollview.vala  textfield.vala
lumen-panel/src/components/: app.vala  apppopup.vala  itray.vala  launcher.vala  panel.vala  tray.vala
lumen-panel/src/components/battery/: battery.vala  battery_module.vala  battery_service.vala  batterypage.vala  power_profile.vala  power_profile_service.vala
lumen-panel/src/components/bluetooth/: bluetooth.vala  bluetooth_detail.vala  bluetooth_module.vala  bluetooth_service.vala  bluetoothpage.vala  bluetoothrow.vala  btctl.vala
lumen-panel/src/components/brightness/: brightness_service.vala
lumen-panel/src/components/clock/: clock.vala
lumen-panel/src/components/control_center/: control_center.vala  control_module.vala
lumen-panel/src/components/exit/: exit.vala  exitpage.vala
lumen-panel/src/components/sni/: sni_item.vala  sni_menu.vala  sni_watcher.vala  systray.vala
lumen-panel/src/components/sound/: pactl.vala  sound.vala  sound_detail.vala  sound_module.vala  sound_service.vala  soundpage.vala
lumen-panel/src/components/system/: logind_service.vala
lumen-panel/src/components/trays/: battery.vala  battery_service.vala  batterypage.vala  hoverableicon.vala  itraypage.vala  nmcli.vala  pactl.vala  sound.vala  soundpage.vala  wifi.vala  wifi_service.vala  wifilistviewport.vala  wifipage.vala
lumen-panel/src/components/wifi/: nmcli.vala  wifi.vala  wifi_detail.vala  wifi_module.vala  wifi_service.vala  wifipage.vala  wifirow.vala
lumen-panel/src/widgets/: cc_slider.vala  chip.vala  progress_bar.vala  segmented_control.vala  signal_bars.vala  text_field.vala  tray.vala  tray_button.vala  tray_registry.vala  tray_reveal.vala  wifi_arc.vala
lumen-panel/src/wl/: toplevels.vala
lumen-panel/subprojects/: libdrawkit
lumen-settings/: default-settings-theme.json  meson.build
lumen-settings/data/: org.lumenshell.Settings.desktop
lumen-settings/src/: diaglog.vala  main.vala  page.vala  registry.vala  resources.gresource.xml  sidebar.vala  theme.vala  window.vala
lumen-settings/src/pages/: about_page.vala  appearance_page.vala  desktop_page.vala  display_page.vala  input_common.vala  keyboard_page.vala  lockscreen_page.vala  mouse_page.vala  notifications_page.vala  osd_page.vala  panel_page.vala  power_page.vala  touchpad_page.vala  wallpaper_page.vala  xkb_layouts.vala
lumen-settings/src/res/: style.css
lumen-settings/src/stores/: ini_store.vala  json_store.vala  output_manager.vala  paths.vala  wlr_randr.vala
lumen-settings/src/wayfire/: generic_section_page.vala  metadata.vala  plugin_page.vala  wayfire_pages.vala
lumen-settings/src/widgets/: action_row.vala  binding_row.vala  boxed_list.vala  color_row.vala  combo_row.vala  display_arranger.vala  entry_row.vala  file_row.vala  reorder_list.vala  spin_row.vala  switch_row.vala
wayfire-plugins/default-focus/: meson.build
wayfire-plugins/default-focus/metadata/: wayfire-default-focus.xml
wayfire-plugins/default-focus/src/: default-focus.cpp
wayfire-plugins/night-light/: meson.build
wayfire-plugins/night-light/metadata/: wayfire-night-light.xml
wayfire-plugins/night-light/src/: night-light.cpp
wayfire-plugins/shade-peek/: meson.build
wayfire-plugins/shade-peek/metadata/: wayfire-shade-peek.xml
wayfire-plugins/shade-peek/src/: shade-peek.cpp
wlhooks/: DEPRECATED.md  egl.c  egl.h  main.c  meson.build  registry.c  registry.h  wlhooks.h
wlhooks/protocols/: activation.c  activation.h  compositor.c  compositor.h  ext_toplevel.c  ext_toplevel.h  idle_notify.c  idle_notify.h  keyboard.c  keyboard.h  layershell.c  layershell.h  output.c  output.h  output_management.c  output_management.h  pointer.c  pointer.h  screencopy.c  screencopy.h  seat.c  seat.h  shm.c  shm.h  toplevel.c  toplevel.h  window_list.c  window_list.h  wlr_toplevel.c  wlr_toplevel.h  xkb.c  xkb.h
(+286 files in other folders)
