option(
  'with_desktop_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-desktop-peek Wayfire plugin (needs Wayfire 0.10 dev headers).',
)

option(
  'with_curtain_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-curtain-peek Wayfire plugin (splits the screen down the middle to reveal the desktop; needs Wayfire 0.10 dev headers).',
)

option(
  'with_panel_peek',
  type: 'boolean',
  value: true,
  description: 'Let a click on the empty middle of lumen-panel trigger the Wayfire desktop-peek (Win+D). Disable for a standalone panel with no Wayfire coupling.',
)

option(
  'with_slide_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-slide-peek Wayfire plugin (slides the foreground off one edge while the desktop grid slides in from the opposite edge; needs Wayfire 0.10 dev headers).',
)

option(
  'with_startup_zoom',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-startup-zoom Wayfire plugin (needs Wayfire 0.10 dev headers).',
)

option(
  'with_default_focus',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-default-focus Wayfire plugin (needs Wayfire 0.10 dev headers and wlr-protocols).',
)
