option(
  'with_desktop_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-desktop-peek Wayfire plugin (needs Wayfire 0.10 dev headers).',
)

option(
  'with_curtain_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-curtain-peek Wayfire plugin (splits the screen down the middle to reveal the desktop; needs Wayfire 0.10 dev headers).',
)

option(
  'with_panel_peek',
  type: 'boolean',
  value: true,
  description: 'Let a click on the empty middle of lumen-panel trigger the Wayfire desktop-peek (Win+D). Disable for a standalone panel with no Wayfire coupling.',
)

option(
  'with_slide_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-slide-peek Wayfire plugin (slides the foreground off one edge while the desktop grid slides in from the opposite edge; needs Wayfire 0.10 dev headers).',
)

option(
  'with_converge_lock',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-converge-lock Wayfire plugin (collapses both screen halves onto the centre seam over black and holds; the pre-lock transition the lockscreen expands out of; needs Wayfire 0.10 dev headers).',
)

option(
  'with_panel_push',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-panel-push Wayfire plugin (slides the whole scene away from one edge to free a strip for lumen-panel\'s push-reveal mode; needs Wayfire 0.10 dev headers).',
)

option(
  'with_startup_zoom',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-startup-zoom Wayfire plugin (needs Wayfire 0.10 dev headers).',
)

option(
  'with_lockscreen',
  type: 'feature',
  value: 'auto',
  description: 'Build lumen-lockscreen + lumen-lockctl (ext-session-lock-v1 lock screen; needs gtk4-session-lock and pam at build time). Auto: built only when both are present.',
)
