option(
  'with_desktop_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-desktop-peek Wayfire plugin (needs Wayfire 0.10 dev headers).',
)

option(
  'with_curtain_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-curtain-peek Wayfire plugin (splits the screen down the middle to reveal the desktop; needs Wayfire 0.10 dev headers).',
)

option(
  'with_panel_peek',
  type: 'boolean',
  value: true,
  description: 'Let a click on the empty middle of lumen-panel trigger the Wayfire desktop-peek (Win+D). Disable for a standalone panel with no Wayfire coupling.',
)

option(
  'with_slide_peek',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-slide-peek Wayfire plugin (slides the foreground off one edge while the desktop grid slides in from the opposite edge; needs Wayfire 0.10 dev headers).',
)

option(
  'with_panel_push',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-panel-push Wayfire plugin (slides the whole scene away from one edge to free a strip for lumen-panel\'s push-reveal mode; needs Wayfire 0.10 dev headers).',
)

option(
  'with_startup_zoom',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-startup-zoom Wayfire plugin (needs Wayfire 0.10 dev headers).',
)

option(
  'with_night_light',
  type: 'boolean',
  value: true,
  description: 'Build the wayfire-night-light Wayfire plugin (warm colour-temperature tint toggled from the panel; needs Wayfire 0.10 dev headers).',
)

option(
  'with_lockscreen',
  type: 'feature',
  value: 'auto',
  description: 'Build lumen-lockscreen + lumen-lockctl (ext-session-lock-v1 lock screen; needs gtk4-session-lock and pam at build time). Auto: built only when both are present.',
)

option(
  'with_polkit_agent',
  type: 'feature',
  value: 'auto',
  description: 'Build lumen-polkit-agent (PolicyKit authentication agent — prompts for a password when a program requests privilege; needs polkit-agent-1 + polkit-gobject-1). Auto: built only when both are present.',
)
